manifest/dev/signalrchat-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: signalrchat-app
  labels:
    app: signalrchat-app
spec:
 replicas: 1
 selector:
   matchLabels:
     app: signalrchat-app
 template:
    metadata:
      labels:
        app: signalrchat-app
    spec:
      containers:
        - name: signalrchat-app
          image: image-registry.openshift-image-registry.svc:5000/signalrchat-app-dev/signalrchat:latest
          ports:
            - containerPort: 8080
              protocol: TCP
