manifest/dev/signalrchat-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: signalrchat-app
  labels:
    app: signalrchat-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: signalrchat-app
