manifest/dev/signalrchat-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: signalrchat-app
  labels:
    app: signalrchat-app
spec:
  host: signalrchat-app-signal-app-uat.apps.cluster-dp894.dp894.sandbox29.opentlc.com
  to:
    kind: Service
    name: signalrchat-git
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
